MDL-40205 theme: fixed overflow of block headers

--- a/theme/bootstrapbase/less/moodle/blocks.less
+++ b/theme/bootstrapbase/less/moodle/blocks.less
@@ -3,10 +3,6 @@
     padding: 8px 0;
 }
 
-.block .header h2 {
-    padding: .2em 0 0 .2em;
-    margin: 0;
-}
 .block .header .title h2,
 .block h3 {
   .nav-header;
@@ -40,6 +36,11 @@
 }
 
 .block {
+    .header h2 {
+        word-wrap: break-word;
+        padding: .2em 0 0 .2em;
+        margin: 0;
+    }
     .content {
         padding: 4px 14px;
         word-wrap: break-word;
